2002-09-05  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/gaphor.py: Added GaphorError here. Added a generic resource
	locator here. Added GaphorError and the resource locator
	(gaphorResource) to the builtin namespace.
	* gaphor/diagram/diagramitemfactory.py (register): do no longer
	gobject.type_register(). Let every class take care of that for
	themselves.
	* gaphor/diagram/klass.py: New file. Implementation of Classes
	(named klass, to avoid name conflicts with python).

2002-08-28  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* Makefile.am: Now require Automake 1.6
	* gaphor/ui/mainwindow.py: Created main window

2002-08-26  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/**/Makefile*: removed. Now only define the files needed in
	the file Files. The root Makefile takes care of the rest.
	* gaphor/config.py.in: New file. configure time configuration stuff is
	put here.

2002-08-20  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/*: Added association and package item
	* Added several comments.
	* gaphor/misc/storage_minidom.py: works again
	* configure.in: Gaphor needs DiaCanvas2 0.8.0 (= current CVS version)

2002-07-04  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/tree: Directory removed, namespace.py is moved to gaphor/ui.
	* gaphor/command: moved to gaphor/ui.command
	* gaohor/UML/diagram.py: fixed bug in loading code.

2002-07-03  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/UML/element.py: Fixed bug and changed load() to queue
	signals. Changed postload to flush the queue.
	* gaphor/command: New directory. Here command classes will be stored.
	Simple and more complex operations should be executed through
	commands.
	* *all files*: changed module paths to the project root. So now we
	should include gaphor.UML in stead of UML.

2002-07-02  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* doc/gaphor.dtd: Allow text data in Value tag.
	* gaphor/UML/element.py: Restructured get/set attr stuff. Now it is