@@ -1,2 +1,4 @@
 
-EXTRA_DIST= UmlMetaModel.xmi model.txt gaphor.txt implementation.txt plan.txt storage.txt thename.txt usecases.txt relationships.txt
+EXTRA_DIST= UmlMetaModel.xmi model.txt gaphor.txt implementation.txt \
+	plan.txt storage.txt thename.txt usecases.txt \
+	relationships.txt usecasedemo.gaphor
