@@ -144,7 +144,7 @@ class AssociationItem(relationship.RelationshipItem):
 	    s2 = c2.subject
 	    end_head, end_tail, relation = self.find_relationship(s1, s2)
 	    if not relation:
-		element_factory = gaphorResource(UML.ElementFactory)
+		element_factory = GaphorResource(UML.ElementFactory)
 		relation = element_factory.create(UML.Association)
 		end_head = element_factory.create(UML.AssociationEnd)
 		end_tail = element_factory.create(UML.AssociationEnd)
