@@ -11,8 +11,8 @@ import string
 
 class StorageInfo:
     def __init__(self):
-	self.factory = gaphorResource(UML.ElementFactory)
-	self.itemfactory = gaphorResource(diagram.DiagramItemFactory)
+	self.factory = GaphorResource(UML.ElementFactory)
+	self.itemfactory = GaphorResource(diagram.DiagramItemFactory)
 	self.cid2item = { }
 	self.doc=None
 
